tests/failed/03-unsupported-attr.stderr
error: unsupported attribute
 --> $DIR/03-unsupported-attr.rs:4:3
  |
4 | #[endian]
  |   ^^^^^^
